# MandelbrotSet

./: .gitattributes  .gitignore  CMakeLists.txt  GenerateVS2019.bat  README.md  premake5.lua
.github/workflows/: ci.yml
MandelbrotSet/: CMakeLists.txt  imgui.ini
MandelbrotSet/Shaders/: JuliaSet.glsl  Mandelbrot.glsl
MandelbrotSet/Source/: Application.cpp  Application.h  Core.h  ImGuiUtil.cpp  ImGuiUtil.h  Main.cpp  Shader.cpp  Shader.h
